# momo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  cov.yml  fmt.yml  lint.yml  test.yml  tests.yml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/code/: Cargo.toml
crates/code/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/drive/: Cargo.toml
crates/drive/src/: lib.rs
crates/fir/: Cargo.toml
crates/fir/src/: lib.rs  lower.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/mair/: Cargo.toml
crates/mair/src/: lib.rs  lower.rs
crates/ment/: Cargo.toml
crates/ment/src/: lib.rs
crates/name/: Cargo.toml
crates/name/src/: lib.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs  parser.lalrpop
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/query_base/: Cargo.toml
crates/query_base/src/: lib.rs
crates/source/: Cargo.toml
crates/source/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/tree/: Cargo.toml  build.rs  momo.ungram
crates/tree/src/: lib.rs
crates/wasm/src/: lib.rs
goal/: sum.momo
src/: main.rs
