[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.3"
query_base = { version = "0.1.0", path = "../query_base" }
smol_str = "0.1.23"
source = { version = "0.1.0", path = "../source" }
syntax = { version = "0.1.0", path = "../syntax" }
unicode-xid = "0.2.3"
