[package]
name = "tree"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.3"
lexer = { version = "0.1.0", path = "../lexer" }
parse = { version = "0.1.0", path = "../parse" }
query_base = { version = "0.1.0", path = "../query_base" }
source = { version = "0.1.0", path = "../source" }
syntax = { version = "0.1.0", path = "../syntax" }

[build-dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
ungrammar = "1.16.1"
